# WebNSSolver

./: Cargo.toml  README.md  README.rst  index.html  package-lock.json  package.json  style.css  tsconfig.json
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: deployment.yml
script/: dom.ts  main.ts  webgl.ts
script/webgl/: buffer.ts  context.ts  program.ts
shader/: fragmentShader.glsl  vertexShader.glsl
src/: array.rs  colormap.rs  correct.rs  dct.rs  drawer.rs  find_dt.rs  lib.rs  logging.rs  main.rs  predict.rs  simulator.rs  tdm.rs
typescript/: main.ts
