[package]
name = "web_ns_solver"
version = "0.1.0"
authors = ["Naoki Hori"]
description = "Navier-Stokes Solver in Browsers"
repository = "https://github.com/NaokiHori/WebNSSolver"
edition = "2021"
publish = false
license-file = "LICENSE"

[[bin]]
name = "web_ns_solver"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = []
binary_crate = ["rust_npy_io"]

[dependencies]
wasm-bindgen = { version = "0.2.99" }

[dependencies.rust_npy_io]
git = "https://github.com/NaokiHori/rust_npy_io.git"
branch = "main"
features = ["writer"]
optional = true
